--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "/***************************Web Design*******************/\r Start date: 6/1/2016",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.9.0"
-  },
   "devDependencies": {
+    "angular-aria": "^1.4.8",
+    "angular-bootstrap": "^0.12.2",
+    "angular-material-icons": "^0.6.0",
+    "angular-ui-router": "^0.2.15",
+    "angularjs-toaster": "^0.4.15",
+    "bootstrap": "^3.3.6",
     "browser-sync": "^2.11.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1"
