--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
   ],
   "dependencies": {
     "jquery": "~2.2.0",
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "bootstrap": "~3.3.6",
+    "font-awesome": "fontawesome#~4.5.0"
   },
   "devDependencies": {}
 }
