--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,10 @@
     "jquery": "~2.2.0",
     "angular": "~1.4.8",
     "bootstrap": "~3.3.6",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-ui-router": "~0.2.15",
+    "angular-animate": "~1.4.8",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {}
 }
