--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "font-awesome": "fontawesome#~4.5.0",
     "angular-ui-router": "~0.2.15",
     "angular-animate": "~1.4.8",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "wow": "wowjs#^1.1.2",
+    "imageviewer": "^0.5.0"
   },
   "devDependencies": {}
 }
